--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.8.0",
     "next": "14.1.4",
+    "next-intl": "^3.11.3",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18"
