--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next-intl": "^3.11.3",
     "next-themes": "^0.3.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sharp": "^0.33.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
