--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.19",
     "@heroicons/react": "^2.1.3",
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.8.0",
