--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "sharp": "^0.33.3"
   },
   "devDependencies": {
+    "@types/node": "^20.12.8",
+    "@types/react": "^18.3.1",
     "autoprefixer": "^10.4.19",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
     "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3"
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.4.5"
   }
 }
