--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.19",
     "@heroicons/react": "^2.1.3",
+    "@vercel/postgres": "^0.8.0",
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.8.0",
     "next": "14.1.4",
