--- a/tsconfig.json
+++ b/tsconfig.json
@@ -115,7 +115,7 @@
     ".next/types/**/*.ts",
     "**/*.ts",
     "**/*.tsx"
-, "src/app/providers.js"  ],
+, "src/app/providers.js", "src/app/components/AddUserPopup.jsx", "src/app/components/Carousel.jsx"  ],
   "exclude": [
     "node_modules"
   ]
