--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@auth0/nextjs-auth0": "^3.5.0",
     "@headlessui/react": "^1.7.19",
     "@heroicons/react": "^2.1.3",
+    "@vercel/blob": "^0.23.3",
     "@vercel/postgres": "^0.8.0",
     "dotenv": "^16.4.5",
     "flowbite": "^2.3.0",
