--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-medium-image-zoom": "^5.2.4",
     "sharp": "^0.33.3"
   },
   "devDependencies": {
