--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-dom": "^18",
     "react-medium-image-zoom": "^5.2.4",
     "react-share": "^5.1.0",
-    "sharp": "^0.33.3"
+    "sharp": "^0.33.3",
+    "stripe": "^15.12.0"
   },
   "devDependencies": {
     "@types/node": "20.12.8",
