--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-medium-image-zoom": "^5.2.4",
     "react-share": "^5.1.0",
     "sharp": "^0.33.3",
-    "stripe": "^15.12.0"
+    "stripe": "^15.12.0",
+    "swiper": "^11.1.4"
   },
   "devDependencies": {
     "@types/node": "20.12.8",
