--- a/tsconfig.json
+++ b/tsconfig.json
@@ -115,7 +115,7 @@
     ".next/types/**/*.ts",
     "**/*.ts",
     "**/*.tsx"
-, "src/app/providers.js", "src/app/components/AddUserPopup.jsx", "src/app/components/Carousel.jsx", "src/app/api/auth/[auth0]"  ],
+, "src/app/providers.js", "src/app/components/AddUserPopup.jsx", "src/app/components/Carousel.jsx", "src/app/api/auth/[auth0]", "src/i18n.js", "src/app/constants.js"  ],
   "exclude": [
     "node_modules"
   ]
